[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mememage"
version = "0.1.5"
description = "Encode an identifier into an image's pixels; verify a JSON record against any copy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Catmemes"}]
keywords = ["steganography", "image", "content-hash", "tamper-evident", "provenance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Security :: Cryptography",
]
# Pillow ships in the base install: reading and writing the bar in an image's
# pixels IS the core of Mememage, so `pip install mememage` encodes/decodes out
# of the box.
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
# Field encryption (encode(password=…) / unlock) — AES-256-GCM via PBKDF2.
encrypt = ["cryptography>=41.0"]
# HEIC input (iPhone photos). Pillow is already a base dep; this adds the decoder.
heic = ["pillow-heif>=0.16"]
dev = ["pytest>=7.0", "Pillow>=10.0", "cryptography>=41.0", "numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/sememtac/mememage"

[project.scripts]
mememage = "mememage.__main__:main"

[tool.setuptools.packages.find]
include = ["mememage*"]
